# balloonist

./: NOTES.md  README.md  TODO.md  pyproject.toml
src/balloonist/: __init__.py  core.py
src/balloons/: __init__.py  core.py  utils.py
tests/basic/: objects.py  schema.py  struct.py  test_main.py
tests/basic/database/Cat/: abigail.json  benjamin.json  charlotte.json
tests/basic/database/Dog/: alex.json  bella.json  cody.json
tests/basic/database/Owner/: alice.json  bob.json  carol.json
tests/basic/struct/Cat/: abigail.json  charlotte.json
tests/basic/struct/Dog/: bella.json  cody.json
tests/basic/struct/Owner/: alice.json  bob.json  carol.json
tests/recursive/: objects.py  schema.py  struct.py  test_main.py
tests/recursive/database/CompositeFood/: fruit-and-vegetable-salad.json  fruit-salad.json  vegetable-salad.json
tests/recursive/database/SimpleFood/: apple.json  date.json
tests/recursive/struct/CompositeFood/: fruit-and-vegetable-salad.json  fruit-salad.json  vegetable-salad.json
tests/recursive/struct/SimpleFood/: banana.json  carrot.json
